# SynDay

./: .gitignore  README.md
.github/workflows/: android-debug.yml  ios-nosign.yml
backend/: .env.example  Dockerfile  go.mod  go.sum
backend/bridge/: bridge.go
backend/cmd/api/: main.go
backend/cmd/migrate/: main.go
backend/core/: core.go
backend/core/ai_generator/: ai_generator.go
backend/core/base_db/: base_db.go
backend/features/: features.go
backend/migrations/: 001_initial_schema.sql  002_business_functions.sql  003_policy_constraints.sql  004_idempotent_operations.sql  005_focus_auto_completion.sql  006_realtime_channel_capabilities.sql
deploy/: .env.example  docker-compose.yml  nginx-synday-bootstrap.conf  nginx-synday.conf  synday-api.service
docs/: ACCEPTANCE.md  DECISIONS.md  DEPLOYMENT.md  FUTURE_PRODUCT_WHITEPAPER.md  GAP_ANALYSIS.md  GITHUB_ACTIONS.md  HANDOFF.md  MOBILE_BUILD.md  PLAN.md  PRIVACY.md  PRODUCT_SCOPE_MATRIX.md  ROADMAP_V2.md  STATUS.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  auth.js  config.js  db.js  main.js  notifications.js  realtime.js  styles.css  sync.js
frontend/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: ios_push.rs  lib.rs  main.rs
ios/: README.md
scripts/: check.sh  dev-env.sh  generate-notification-sounds.mjs  native-build.sh  prepare-ios-assets.sh  production-check.sh  strip-ios-icon-alpha.swift
(+95 files in other folders)
